# some

./: '  .gitignore  CMakeLists.txt
.cache/clangd/index/: benchmark.cpp.36E22D66A9614025.idx  benchmark.cpp.53AB0D186CAC18BA.idx  benchmark.cpp.7995454F11971186.idx  benchmark.cpp.8B02CA11B1036F85.idx  benchmark.cpp.BAECB45EEE6ADDB2.idx  benchmark.cpp.BDF4A680E88A08C7.idx  fast_descent.h.A922002E0B19E77D.idx  gaus.h.2505B95714E7F3C1.idx  gaus.h.511791FD9C15F65F.idx  gaus.h.53F1DA7A63DB4D2B.idx  gaus.h.5B94A08047B7B5E5.idx  gaus.h.718324F1BA8CC2AB.idx  gaus.h.BC966062CE80F4C6.idx  latex.h.07C9DDB867DD7ABE.idx  latex.h.22DEF793DF26D420.idx  latex.h.3143B45D5181CBF5.idx  latex.h.4747C4599CD2D605.idx  latex.h.658A7E990493A0B2.idx  latex.h.8FC3168A7B868712.idx  latex.h.CCBD9AEE2D8AF2A7.idx  lu_dec.h.762E85E6E74CBC9F.idx  lu_dec.h.FBABAB87C37361E8.idx  main.cpp.4ADA6DE683C2A38D.idx  main.cpp.62478ED94A92BEC6.idx  main.cpp.685910B8D634D367.idx  main.cpp.9224618A8C9A9D35.idx  main.cpp.AC1D532F8AE48F45.idx  main.cpp.B5C4E28C01044962.idx  main.cpp.BCD641109AE86B80.idx  main.cpp.BEBB84E597E352E5.idx  main.cpp.CFFEF5D8EF7B2B0B.idx  main.cpp.F4575918E6AD8659.idx  main.cpp.FF60E6CC07CDD369.idx  options.h.2376323D044D153B.idx  options.h.412E40930D84545E.idx  options.h.41F4C6F46CA843EB.idx  options.h.71AF798281F7035B.idx  options.h.8AE8300D5B62186A.idx  options.h.D71F27B364BF94AD.idx  options.h.E619389DE7D07E07.idx  (+25 more)
Report/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  main.xdv
Report/parts/: application.aux  application.tex  conclusion.aux  conclusion.tex  description_of_the_algorithm.aux  description_of_the_algorithm.tex  introduction.aux  introduction.tex  testing.aux  testing.tex  titledata.tex
Report/style/: mainstyle.sty  textstyle.sty  titlepage.sty
Report/style/mycommands/: code.sty  math.sty  moresections.sty  theorem.sty
include/: fast_descent.h  gaus.h  latex.h  lu_dec.h  options.h  rev_iter.h  simple_iter.h  simple_relaxation.h  types.h
src/: CMakeLists.txt  benchmark.cpp  main.cpp
tests/: CMakeLists.txt  benchmark.cpp  output  output.txt  test.cpp
tests/testdata/: app  test  test1  test2
